# pointer-analysis

./: .gitignore  Cargo.toml  README.md  analyze.sh  build.rs  ctobc.sh  gen-llvm.sh  graph-analysis.py  lltobc.sh  make-c0-tables.sh  make-tables.py  results-c0-new.json  results-c0.json  results-c1.json  run-benches.sh
.devcontainer/: Dockerfile  devcontainer.json
benches/: real_world.rs
benchmarks/: versions.md
benchmarks/curl/: bench.bc
benchmarks/htop/: bench.bc
benchmarks/make/: bench.bc
benchmarks/openssl/: bench.bc
benchmarks/tmux/: bench.bc
examples/: constant_inttoptr.c  fieldloop.c  globalstruct.c  globalstructinitializedinmain.c  globalvars.c  heap.c  heapstructs.c  nested_init.c  nestedstructs.c  pointer_arith.c  pointer_arith2.c  structargument.c  structassign.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c  union.c  var_args2.c
examples/multifile1/: main.c  other.c  other.h
res/ctest1/: test_config.json
res/ctest2/: test_config.json
res/ctest3/: test_config.json
res/ctest4/: ctest4.c  test_config.json
res/ctest5/: test_config.json
res/struct_assign/: test_config.json
res/test6/: test_config.json
res/test7/: test_config.json
res/test8/: test_config.json
res/test9/: test9.c  test_config.json
src/: analysis.rs  bit_index_utils.rs  cli.rs  lib.rs  macros.rs  main.rs  module_visitor.rs  solver.rs  visualizer.rs
src/analysis/: dummy.rs  mod.rs  tests.rs
src/module_visitor/: mod.rs  pointer.rs  std_functions.rs  structs.rs
src/solver/: basic.rs  basic_demand.rs  better_bitvec.rs  bit_vec.rs  context.rs  context_wave_prop.rs  hash.rs  mod.rs  rc_termset.rs  roaring_solver.rs  roaring_wave_propagation.rs  scc.rs  (+6 more)
(+71 files in other folders)
