[package]
name = "pointer-analysis"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
either = "1.8.1"
hashbrown = { version = "0.13.2", features = ["serde"] }
llvm-ir = { version = "0.8.2", features = ["llvm-14"] }

[dev-dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
test-generator = "0.3.1"

[build-dependencies]
build-deps = "0.1.4"
