[package]
name = "pointer-analysis"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.2.7", features = ["cargo", "derive", "color"] }
either = "1.8.1"
hashbrown = { version = "0.14.3", features = ["serde"] }
llvm-ir = { version = "0.9.0", features = ["llvm-14"] }
once_cell = "1.17.1"
log = "0.4.17"
stderrlog = "0.5.4"
roaring = "0.10.1"
dot = "0.1.4"
lazy_static = "1.4.0"
smallvec = { version = "1.13.1", features = ["const_generics"] }
arrayvec = "0.7.4"
tinybitset = "0.0.1"
indexmap = "2.2.5"
itertools = "0.12"
uniset = "0.2"
sdset = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.4"

[dev-dependencies]
test-generator = "0.3.1"
criterion = "0.4.0"
glob = "0.3.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[build-dependencies]
build-deps = "0.1.4"

[[bench]]
name = "real_world"
harness = false

[profile.release]
debug = true
